Støtte for auth med OpenAM